Add version catalog and spotless formatting rules