@@ -1,5 +1,14 @@
 package com.mjc.school.service.impl;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import com.mjc.school.repository.filter.pagination.Pagination;
 import com.mjc.school.repository.impl.TagRepository;
 import com.mjc.school.repository.model.Tag;
@@ -27,178 +36,164 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Tag Service Unit tests")
 class TagServiceTest {
 
-    @Mock
-    private TagRepository tagRepository;
+  @Mock private TagRepository tagRepository;
 
-    @Mock
-    private TagMapper mapper;
+  @Mock private TagMapper mapper;
 
-    @Mock
-    private TagSearchFilterMapper tagSearchFilterMapper;
+  @Mock private TagSearchFilterMapper tagSearchFilterMapper;
 
-    @InjectMocks
-    private TagService tagService;
+  @InjectMocks private TagService tagService;
 
-    private Tag tag;
-    private TagDtoRequest tagDtoRequest;
-    private TagDtoResponse tagDtoResponse;
+  private Tag tag;
+  private TagDtoRequest tagDtoRequest;
+  private TagDtoResponse tagDtoResponse;
 
-    @BeforeEach
-    void setUp(){
-        tag = new Tag();
-        tag.setId(1L);
-        tag.setName("Technology");
+  @BeforeEach
+  void setUp() {
+    tag = new Tag();
+    tag.setId(1L);
+    tag.setName("Technology");
 
-        tagDtoRequest = new TagDtoRequest("Technology");
-        tagDtoResponse = new TagDtoResponse(1L,"Technology");
-    }
+    tagDtoRequest = new TagDtoRequest("Technology");
+    tagDtoResponse = new TagDtoResponse(1L, "Technology");
+  }
 
-    @Test
-    @DisplayName("Should return all tags with pagination")
-    void readAll_ShouldReturnPagedTags(){
+  @Test
+  @DisplayName("Should return all tags with pagination")
+  void readAll_ShouldReturnPagedTags() {
+    // Given
+    ResourceSearchFilterRequestDTO searchRequest =
+        new ResourceSearchFilterRequestDTO(1, 10, Collections.emptyList(), Collections.emptyList());
+    Page<Tag> page = new PageImpl<>(List.of(tag));
 
-        ResourceSearchFilterRequestDTO searchRequest = new ResourceSearchFilterRequestDTO(1,10, Collections.emptyList(),Collections.emptyList());
-        Page<Tag> page = new PageImpl<>(List.of(tag));
+    when(tagSearchFilterMapper.map(any()))
+        .thenReturn(
+            new ResourceSearchFilter(
+                new Pagination(1, 10), Collections.emptyList(), Collections.emptyList()));
+    when(tagRepository.findAll(ArgumentMatchers.<Specification<Tag>>any(), any(Pageable.class)))
+        .thenReturn(page);
+    when(mapper.modelListToDtoList(anyList())).thenReturn(List.of(tagDtoResponse));
+    // When
+    PageDtoResponse<TagDtoResponse> result = tagService.readAll(searchRequest);
+    // Then
+    assertThat(result).isNotNull();
+    assertThat(result.getModelDtoList()).hasSize(1);
+    assertThat(result.getCurrentPage()).isEqualTo(1);
+    assertThat(result.getPageCount()).isEqualTo(1);
+    verify(tagRepository).findAll(ArgumentMatchers.<Specification<Tag>>any(), any(Pageable.class));
+  }
 
-        when(tagSearchFilterMapper.map(any())).thenReturn(new ResourceSearchFilter(new Pagination(1, 10),Collections.emptyList(),Collections.emptyList()));
-        when(tagRepository.findAll(ArgumentMatchers.<Specification<Tag>>any(),any(Pageable.class))).thenReturn(page);
-        when(mapper.modelListToDtoList(anyList())).thenReturn(List.of(tagDtoResponse));
+  @Test
+  @DisplayName("Should return tag ID when tag exists")
+  void readById_WhenTagExists_ShouldReturnTag() {
+    // Given
+    when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
+    when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
+    // When
+    TagDtoResponse result = tagService.readById(1L);
+    // Then
+    assertThat(result).isNotNull();
+    assertThat(result.getId()).isEqualTo(1L);
+    assertThat(result.getName()).isEqualTo("Technology");
+    verify(tagRepository).findById(1L);
+  }
 
-        PageDtoResponse<TagDtoResponse> result = tagService.readAll(searchRequest);
+  @Test
+  @DisplayName("Should throw NotFoundException when tag does not exist")
+  void readById_WhenTagDoesNotExist_ShouldThrowNotFoundException() {
+    // Given
+    when(tagRepository.findById(2L)).thenReturn(Optional.empty());
+    // When
+    assertThatThrownBy(() -> tagService.readById(2L))
+        .isInstanceOf(NotFoundException.class)
+        .hasMessageContaining("Tag with id 2 does not exist.");
+    // Then
+    verify(tagRepository).findById(2L);
+  }
 
-        assertThat(result).isNotNull();
-        assertThat(result.getModelDtoList()).hasSize(1);
-        assertThat(result.getCurrentPage()).isEqualTo(1);
-        assertThat(result.getPageCount()).isEqualTo(1);
-        verify(tagRepository).findAll(ArgumentMatchers.<Specification<Tag>>any(),any(Pageable.class));
-    }
+  @Test
+  @DisplayName("Should create tag successfully")
+  void create_ShouldCreateAndReturnTag() {
+    // Given
+    when(mapper.dtoToModel(tagDtoRequest)).thenReturn(tag);
+    when(tagRepository.save(tag)).thenReturn(tag);
+    when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
+    // When
+    TagDtoResponse result = tagService.create(tagDtoRequest);
+    // Then
+    assertThat(result).isNotNull();
+    assertThat(result.getId()).isEqualTo(1L);
+    assertThat(result.getName()).isEqualTo("Technology");
+    verify(tagRepository).save(tag);
+  }
 
-    @Test
-    @DisplayName("Should return tag ID when tag exists")
-    void readById_WhenTagExists_ShouldReturnTag(){
+  @Test
+  @DisplayName("Should update tag when tag exists")
+  void update_WhenTagExists_ShouldUpdateTag() {
+    // Given
+    when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
+    when(tagRepository.save(tag)).thenReturn(tag);
+    when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
+    // When
+    TagDtoResponse result = tagService.update(1L, tagDtoRequest);
+    // Then
+    assertThat(result).isNotNull();
+    assertThat(result.getId()).isEqualTo(1L);
+    verify(tagRepository).save(tag);
+  }
 
-        when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
-        when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
+  @Test
+  @DisplayName("Should throw NotFoundException when updating non-existent tag")
+  void update_WhenTagDoesNotExist_ShouldThrowNotFoundException() {
+    // Given
+    when(tagRepository.findById(2L)).thenReturn(Optional.empty());
+    // When
+    assertThatThrownBy(() -> tagService.update(2L, tagDtoRequest))
+        .isInstanceOf(NotFoundException.class)
+        .hasMessageContaining("Tag with id 2 does not exist.");
+    // Then
+    verify(tagRepository, never()).save(any());
+  }
 
-        TagDtoResponse result = tagService.readById(1L);
+  @Test
+  @DisplayName("Should delete tag when tag exists")
+  void deleteById_WhenTagExists_ShouldDeleteTag() {
+    // Given
+    when(tagRepository.existsById(1L)).thenReturn(true);
+    doNothing().when(tagRepository).deleteById(1L);
+    // When
+    tagService.deleteById(1L);
+    // Then
+    verify(tagRepository).deleteById(1L);
+  }
 
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
-        assertThat(result.getName()).isEqualTo("Technology");
-        verify(tagRepository).findById(1L);
-    }
+  @Test
+  @DisplayName("Should throw NotFoundException when deleting non-existent tag")
+  void deleteById_WhenTagDoesNotExist_ShouldThrowNotFoundException() {
+    // Given
+    when(tagRepository.existsById(2L)).thenReturn(false);
+    // When
+    assertThatThrownBy(() -> tagService.deleteById(2L))
+        .isInstanceOf(NotFoundException.class)
+        .hasMessageContaining("Tag with id 2 does not exist.");
+    // Then
+    verify(tagRepository, never()).deleteById(any());
+  }
 
-
-    @Test
-    @DisplayName("Should throw NotFoundException when tag does not exist")
-    void readById_WhenTagDoesNotExist_ShouldThrowNotFoundException(){
-
-        when(tagRepository.findById(2L)).thenReturn(Optional.empty());
-
-        assertThatThrownBy(()->tagService.readById(2L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("Tag with id 2 does not exist.");
-
-        verify(tagRepository).findById(2L);
-    }
-
-
-    @Test
-    @DisplayName("Should create tag successfully")
-    void create_ShouldCreateAndReturnTag(){
-
-        when(mapper.dtoToModel(tagDtoRequest)).thenReturn(tag);
-        when(tagRepository.save(tag)).thenReturn(tag);
-        when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
-
-        TagDtoResponse result = tagService.create(tagDtoRequest);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
-        assertThat(result.getName()).isEqualTo("Technology");
-        verify(tagRepository).save(tag);
-    }
-
-    @Test
-    @DisplayName("Should update tag when tag exists")
-    void update_WhenTagExists_ShouldUpdateTag(){
-
-        when(tagRepository.findById(1L)).thenReturn(Optional.of(tag));
-        when(tagRepository.save(tag)).thenReturn(tag);
-        when(mapper.modelToDto(tag)).thenReturn(tagDtoResponse);
-
-        TagDtoResponse result = tagService.update(1L,tagDtoRequest);
-
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
-        verify(tagRepository).save(tag);
-    }
-
-    @Test
-    @DisplayName("Should throw NotFoundException when updating non-existent tag")
-    void update_WhenTagDoesNotExist_ShouldThrowNotFoundException(){
-
-        when(tagRepository.findById(2L)).thenReturn(Optional.empty());
-
-        assertThatThrownBy(()->tagService.update(2L,tagDtoRequest))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("Tag with id 2 does not exist.");
-
-        verify(tagRepository,never()).save(any());
-    }
-
-
-    @Test
-    @DisplayName("Should delete tag when tag exists")
-    void deleteById_WhenTagExists_ShouldDeleteTag(){
-
-        when(tagRepository.existsById(1L)).thenReturn(true);
-        doNothing().when(tagRepository).deleteById(1L);
-
-        tagService.deleteById(1L);
-
-        verify(tagRepository).deleteById(1L);
-    }
-
-
-    @Test
-    @DisplayName("Should throw NotFoundException when deleting non-existent tag")
-    void deleteById_WhenTagDoesNotExist_ShouldThrowNotFoundException(){
-
-        when(tagRepository.existsById(2L)).thenReturn(false);
-
-        assertThatThrownBy(()->tagService.deleteById(2L))
-                .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("Tag with id 2 does not exist.");
-
-        verify(tagRepository,never()).deleteById(any());
-    }
-
-
-    @Test
-    @DisplayName("Should return tags by news ID")
-    void readByNewsId_WhenTagExists_ShouldReturnTag(){
-
-        when(tagRepository.findByNewsId(1L)).thenReturn(List.of(tag));
-        when(mapper.modelListToDtoList(List.of(tag))).thenReturn(List.of(tagDtoResponse));
-
-        List<TagDtoResponse> result = tagService.readByNewsId(1L);
-
-        assertThat(result).isNotNull().hasSizeGreaterThan(0);
-        verify(tagRepository).findByNewsId(1L);
-    }
+  @Test
+  @DisplayName("Should return tags by news ID")
+  void readByNewsId_WhenTagExists_ShouldReturnTag() {
+    // Given
+    when(tagRepository.findByNewsId(1L)).thenReturn(List.of(tag));
+    when(mapper.modelListToDtoList(List.of(tag))).thenReturn(List.of(tagDtoResponse));
+    // When
+    List<TagDtoResponse> result = tagService.readByNewsId(1L);
+    // Then
+    assertThat(result).isNotNull().hasSizeGreaterThan(0);
+    verify(tagRepository).findByNewsId(1L);
+  }
 }
